fix(tools): replace Stream.toList() with collect(Collectors.toList()) for Java 8 compat